Adicionando exercício triangulo

--- a/3 - imc/css/estilo.css
+++ b/3 - imc/css/estilo.css
@@ -1,3 +1,18 @@
 .textoVermelho{
     color: red;
 }
+.textoAzul{
+    color: blue;
+}
+.textoAmarelo{
+    color: yellow;
+}
+.textoLaranja{
+    color: orange;
+}
+.textoRoxo{
+    color: purple;
+}
+.textoPreto{
+    color: black;
+}
